--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -15,7 +15,7 @@
 
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.6 / onion software 1997-2019(c)</a></p>
+		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.6 / onion software 1997-2020(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>プログラミング・マニュアル</h1>
 
@@ -31,7 +31,10 @@
 					<li><a href="#ONEKEY_HELP">ワンキーヘルプ</a></li>
 					<li><a href="#START_DIR">起動ディレクトリ</a></li>
 					<li><a href="#HSP_MECHANISM">HSPのしくみ</a></li>
+					<li><a href="#EX_EXPAND">HSPを機能拡張する<span class="new">（New!）</span></a></li>
+					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール<span class="new">（New!）</span></a></li>
 					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
+					<li><a href="#GAMEDEV">HSPによるゲーム開発<span class="new">（New!）</span></a></li>
 					<li><a href="#MAKE_EXE">実行ファイルの作成方法</a></li>
 					<li><a href="#MAKE_SAVER">スクリーンセーバーの作成</a></li>
 					<li><a href="#START_OPT">起動オプションのパース</a></li>
@@ -39,15 +42,13 @@
 					<li><a href="#SCRIPT_SAMPLE">HSPスクリプトサンプル</a></li>
 					<li><a href="#HIDDEN_WINDOW">メインウィンドウ非表示EXEファイル</a></li>
 					<li><a href="#NO_DIR_MOVE">ディレクトリ移動の無効化</a></li>
-					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール</a></li>
 					<li><a href="#DEBUG_WINDOW">デバッグウィンドウ</a></li>
 					<li><a href="#EX_MACRO">HSP拡張マクロ</a></li>
 					<li><a href="#COLORING_AND_TAB">スクリプトの色分けとタブ</a></li>
 					<li><a href="#EASY_INPUT">かんたん入力</a></li>
 					<li><a href="#PEAS_EDITOR">Peasエディタ</a></li>
-
-					<li><a href="#HSPUTF">UTF8対応版ランタイムの利用について<span class="new">（New!）</span></a></li>
-					<li><a href="#HSP64">64bit(x64)対応版ランタイムの利用について<span class="new">（New!）</span></a></li>
+					<li><a href="#HSPUTF">UTF8対応版ランタイムの利用について</a></li>
+					<li><a href="#HSP64">64bit(x64)対応版ランタイムの利用について</a></li>
 					<li><a href="#HSED3CUSTOM">スクリプトエディタの拡張機能について</a></li>
 				</ol>
 			</li>
@@ -373,10 +374,9 @@
 			<dt>コンパイル</dt>
 			<dd>
 				<p>
-					ソーススクリプト(テキストファイル)を解析し、
+					.hspの拡張子を持つソーススクリプト(テキストファイル)を解析し、
 					HSP用のオブジェクトファイル(AXファイル)を作成します。
-					（ここまでの作業はスクリプトエディタ(HSED3.EXE)とコードジェネレーター(HSPCMP.DLL)が
-					行なっています）
+					（ここまでの作業はスクリプトエディタ(HSED3.EXE)とコードジェネレーター(HSPCMP.DLL)が行なっています）
 				</p>
 			</dd>
 			<dt>実行</dt>
@@ -404,6 +404,43 @@
 		</dl>
 
 
+		<h3 id="EX_EXPAND">HSPを機能拡張する</h3>
+		<p>
+			HSPでは、拡張プラグインや拡張モジュールという方法で、命令を増やしたり、機能を拡張することができます。これは、高度な機能を手軽に扱うことのできる便利なものですが、その仕組みを知っておくと、さらに活用の幅が広がります。<br>
+			そのためには、Windows OSがファイルを実行する仕組みをまず覚えておきましょう。<br>
+			.exeという拡張子を持つファイルをダブルクリックして起動すると、プログラムが動き出すということは皆さん知っていると思います。
+			Windowsにインストールされたプログラム、アクセサリなども最終的に.exeのファイルが起動されています。
+			それに対して、.dllという拡張子も存在します。これは、.exeファイルが起動した後に追加で読み込むことのできるプログラムのファイルです。単体では起動することができず、必ず別なプログラムから呼び出されるものです。
+		</p><pre>
+			拡張子   内容
+			---------------------------------------------------
+			 .exe    実行するプログラムを格納するファイル
+			 .dll    後から読み込むことのできるプログラムを格納するファイル
+		</pre><p>
+			Windowsには、カーネルと呼ばれるOSの中核部分があり、そのプログラムが.exeファイルを起動しています。
+			起動したプログラムが、ウインドウを出したり、文字を表示するためのプログラムを、.dllファイルの形で提供しています。これらは、Windows API(Win32API)、COMコンポーネント、あるいは独立したライブラリ(DirectXやOpenGLなど)として多数用意されています。<br>
+			.dllファイルはWindowsに最初から入っているものもあれば、ユーザーが独自に作成することもできます。これが、WindowsのOS自体に組み込まれているプログラム拡張の仕組みになります。
+		</p>
+
+
+		<h3 id="HSPEX_PLUGIN">HSP拡張プラグイン・モジュール</h3>
+		<p>
+			HSPでは、拡張プラグイン及びモジュールという形で機能を追加していくことが可能です。
+			これにより、HSP本体だけでは実現できない処理が可能になります。<br>
+			拡張プラグインは、DLL(.dll)形式でプログラムに機能を追加する形の拡張機能です。HSPでは、専用に用意された拡張DLLだけでなく、Windowsに標準で用意されているDLL(Windows API)、C/C++用に作成されたDLLを呼び出して使用することが可能になっています。<br>
+			他にも、Windowsの機能を拡張するためのCOMコンポーネント(ActiveX)を任意に呼び出すことも可能です。
+			HSP拡張プラグインは、DLLを使用した拡張機能の中で、主にHSP向けに用意されたものを指します。
+		</p>
+		<p><img src="img/plugin.png"></p> 
+		<p> 
+			HSP拡張モジュールは、拡張プラグインと同様にHSPの機能を追加するものですが、
+			DLLを使用せず、HSPそのもので記述されている点が異なります。
+			いずれの場合も、HSP上で決められた記述をすることで、新しい命令・関数などが追加され、機能を使うことができるようになります。<br>
+			HSPフルセットには、多くのプラグインやモジュールが同梱されています。
+			詳しくは、<a href="plugin.htm">拡張プラグイン・モジュール一覧</a>を参照してください。
+		</p>
+
+
 		<h3 id="EX_RUNTIME">HSPランタイム</h3>
 		<p>
 			「HSPランタイム」は、HSPの動作システム全体を置き換えるための仕組みです。
@@ -413,6 +450,7 @@
 			HSPランタイムは、プリプロセッサ命令「#runtime」によって、スクリプト中で指定します。
 			指定されたランタイムは、スクリプト実行時及び、実行ファイル作成時に反映されます。
 		</p>
+		<p><img src="img/runtime.png"></p> 
 		<p> 
 			HSPでは用途に合わせて「HSPランタイム」を変更して使用する場面が出てきます。
 			たとえば、HSP3Dishランタイムは、マルチプラットフォーム化が可能な命令のみをサポートし、
@@ -474,6 +512,44 @@
 			</dd>
 		</dl>
 
+
+		<h3 id="GAMEDEV">HSPによるゲーム開発</h3>
+		<p>
+			HSPは様々な用途に使うことができますが、最も使われているのは手軽なゲーム開発の場面です。
+			以下を参考にしながら、ゲームの内容や用途に合わせて、HSPの拡張機能を使うかどうかを決めることができます。
+		</p>
+		<dl>
+			<dt>一般的な2Dゲーム</dt>
+			<dd>
+				<p>
+				最も一般的なHSP3標準ランタイム(拡張機能を使用しない)でも、一般的なゲームを作成することが可能です。
+				HSP3標準ランタイムは、基本的なWindows APIのみを利用するため、幅広い機種で互換性が高く、作りやすいメリットがあります。ただし、描画速度が遅く、画面を大量に書き換えるゲームなどには向いていません。<br>
+				sample/gameフォルダ内にサンプルとなるスクリプトを多数収録していますので参考にしてみてください。<br>
+				効果音や音楽の再生には、別途hspogg拡張プラグインを追加することで、細かい制御がサポートされます。
+				</p>
+			</dd>
+			<dt>高度な2Dゲーム</dt>
+			<dd>
+				<p>
+				HSP3標準ランタイムに比べて高速な画面の書き換えが可能なHSP3Dishランタイムが用意されています。<br>
+				これらのランタイムは、Windows上だけでなくandroid,iOS,linux,html5など幅広い環境で動作させることが可能です。
+				描画にもDirectX、OpenGLといったGPU支援のあるAPIを使用しているため大量の画像を処理しても速度が落ちにくいメリットがあります。<br>
+				ただし、HSP3標準ランタイムと比べてサポートされていない機能(複数のウインドウサポートなど)があり、描画の手順にも若干の違いがあります。<br>
+				sample/hsp3dishフォルダ内にサンプルとなるスクリプトを収録していますので参考にしてみてください。
+				</p>
+			</dd>
+			<dt>3Dゲーム</dt>
+			<dd>
+				<p>
+				3D表示を使ったゲームは、HSP3標準ランタイムのみでは機能が足りない場合が多いです。
+				HSPでは、3D表示用ランタイムとしてHGIMG3,HGIMG4を用意しています。HGIMG3は、古くからサポートされてきたDirectX8を使用するもので、現在は新規の開発を終了しています。
+				現在は、これに替わるHGIMG4の機能を随時拡張しています。OpenGLを使用し、HSP3Dishと同様にandroid,iOS,linux,html5のプラットフォームをサポートしています。<br>
+				3Dの機能が必要な場合は、HGIMG4を使用頂けば、FBX形式の3Dデータ表示、アニメーションの再生、ポストエフェクト、カスタムシェーダーの使用など多くのモダンな機能を利用可能です。
+				ただし、すべてのGPU、グラフィックカードをサポートしているわけではありません。Windows7以前の古い機種で動作させる場合は、起動できなかったり、表示がおかしくなるなどの現象が出る可能性があります。<br>
+				sample/hgimg4、sample/pronama3dフォルダ内にサンプルとなるスクリプトを収録していますので参考にしてみてください。
+				</p>
+			</dd>
+		</dl>
 
 		<h3 id="MAKE_EXE">実行ファイルの作成方法</h3>
 		<p>
@@ -710,15 +786,6 @@
 		<p>
 			ディレクトリ移動を無効にした状態では、起動時のシステム変数dir_curとdir_exeが
 			同一でなくなることを前提にスクリプトを作成しておく必要がありますのでご注意下さい。
-		</p>
-
-
-		<h3 id="HSPEX_PLUGIN">HSP拡張プラグイン・モジュール</h3>
-		<p>
-			HSPでは、拡張プラグイン及びモジュールという形で機能を追加していくことが可能です。
-			これにより、HSP本体だけでは実現できない処理が可能になります。
-			HSPフルセットには、多くのプラグインやモジュールが同梱されています。
-			詳しくは、<a href="plugin.htm">拡張プラグイン・モジュール一覧</a>を参照してください。
 		</p>
 
 
@@ -3869,9 +3936,17 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		<h3 id="CUR_COLOR">カレントカラー</h3>
 		<p>
 			メッセージの出力、点、線、矩形の描画などに使用される色がカレントカラー
-			です。これは、palcolor命令、color命令で変更することができます。
+			です。これは、color命令、rgbcolor命令、hsvcolor命令、palcolor命令で変更することができます。
+		<PRE>
+		　例 :
+			color 100,200,300	; R=300,G=200,B=300に設定する
+			hsvcolor 10,20,30	; HSV形式で色を設定する
+			rgbcolor $112233	; 32bitのRGB形式で色を設定する
+			palcolor 20		; パレットカラーによる色の設定
+		</PRE>
 			cls命令などで画面が初期化された時は、カレントカラーは黒色にリセットされます。
-			また、システム変数ginfo_r、ginfo_g、ginfo_bでカレントカラーのRGBをそれぞれ参照することができます。
+			また、pget命令により指定された座標の色をカレントカラーに設定することができます。<br>
+			システム変数ginfo_r、ginfo_g、ginfo_bでカレントカラーのRGBをそれぞれ参照することができます。
 		</p>
 
 
