--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -377,7 +377,7 @@
 
 	<h2 id="SCALE">マニュアル設定項目について</h2>
 	<p>
-	jniフォルダ内のmain.cソースを編集することで、HSP3Dishに関する各種設定を行ないます。<br>
+	jniフォルダ内のmain.cppソースを編集することで、HSP3Dishに関する各種設定を行ないます。<br>
 	<b>通常は、「hsp」フォルダに設定ファイル「hsp3dish.ini」を用意して設定を行なってください。ここでは、ソースコードを修正して、マニュアルで設定する方法について説明しています。</b><br>
 	「static void engine_handle_cmd」で始まるソースコード(160行付近)にある以下の行を修正します。
 	</p>
