スクリプトエディタの最終行へ移動メニューが動作していなかった不具合を修正 mes(print)命令に影付け、縁取りなどの描画オプションを追加 on～命令などによる割り込みコールバックルーチンの制約を厳格化してエラーチェックを追加
Former-commit-id: 40514b069c7d0d705da71fa589a7691f92129eac

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -108,6 +108,7 @@
 					<li><a href="#PACKFILE">PACKFILEと暗号化</a></li>
 					<li><a href="#CNVSRC">Cソースへの変換</a></li>
 					<li><a href="#BOOTOPT">起動設定#bootoptの利用について</a></li>
+					<li><a href="#CALLBACK">コールバックルーチン<span class="new">（New!）</span></a></li>
 				</ol>
 			</li>
 		</ol>
@@ -4638,6 +4639,35 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		HSP3.5以降では、スクリプト中でawait命令を使用している場合のみ、高精度タイマーを使用する形に修正されています。<br>
 		明示的に高精度タイマーの使用をON/OFFしたい場合に、#bootopt命令を使用することができます。
 		「#bootopt notimer 1」をスクリプトに記述した場合は、高精度タイマーを使用しません。
+		</p>
+
+		<h3 id="CALLBACK">コールバックルーチン</h3>
+		<p>
+			コールバックルーチンは、割り込み時など限定された状況で、すぐにreturn命令により処理を終了させる必要があるものを指します。<br>
+			以下の状況で呼び出されるラベル、またはユーザー定義命令はコールバックルーチンとして扱われます。
+		</p>
+		<pre class="quote">
+	・onkey,onexit,onerror,oncmd,onclick割り込み (gosubのみ)
+	・#deffunc命令で定義されるクリーンアップ命令の実行時
+	・モジュール型変数のコンストラクタ、デストラクタ実行時
+	・配置オブジェクト(objlayer)によるユーザー割り込み
+	・es_setgosub命令によるスプライト表示割り込み(HSP3Dish)</pre>
+		<p>
+		コールバックルーチンは、通常のサブルーチンと同様に記述することができますが、
+		時間待ちや停止をさせることができません。
+		以下の命令は、コールバックルーチンで使用することができません。
+		</p>
+		<pre class="quote">
+	wait,await,stop等の時間待ちを行う命令
+	処理を別なプログラムに移行するrun命令
+	screen,bgscrなどシステムタスクを実行する命令</pre>
+		<p>
+		コールバックルーチンの実行時は、通常とは異なり別なシステムにタスクを
+		戻す必要がある状態のため、このような制約が発生します。<br>
+		コールバックルーチンでは、できる限り必要な処理だけを実行して、
+		すぐにreturn命令でタスクを終了してください。
+		もし、コールバックルーチンの実行中に使用できない命令があった場合は、
+		エラー42(コールバック内で使用できない命令です)というエラーが発生します。
 		</p>
 
 
