[HSP3Dish][hsp3js] デバッグ情報を付加して変換できるオプションを追加 β2版でobaq関連命令が正しく初期化されていなかった不具合を修正 ドキュメントの更新
Former-commit-id: feb3b611717ce66eeb8b9af1bc066edf575abf05

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2019(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2020(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>HSP3Dish プログラミングマニュアル・基本仕様ガイド</h1>
 
@@ -23,20 +23,20 @@
 		<li><a href="#ABOUT">HSP3Dishとは</a></li>
 		<li><a href="#DISHUSE">HSP3Dishの使用方法</a></li>
 		<li><a href="#DRAWDIFF">HSP3との差異</a></li>
-		<li><a href="#BUTTON">button命令について</a></li>
+		<li><a href="#BUTTON">配置オブジェクトについて</a><span class="new">（New!）</span></li>
 		<li><a href="#GMODE">gmode命令について</a></li>
 		<li><a href="#GMULCOLOR">gmulcolor命令について</a></li>
 		<li><a href="#GFILTER">gfilter命令について</a></li>
 		<li><a href="#SYSREQ">setreq、getreq命令について</a></li>
 		<li><a href="#MTOUCH">マルチタッチ情報の取得について</a></li>
 		<li><a href="#SOUND">サウンド機能について</a></li>
-		<li><a href="#HTTP">http通信機能について(new)</a></li>
+		<li><a href="#HTTP">http通信機能について</a></li>
 		<li><a href="#SAMPLE">サンプルスクリプト</a></li>
 		<li><a href="#CMDLIST">HSP3Dishコマンドリスト</a></li>
 		<li><a href="#WINHRT">Windows上での実行ファイル作成</a></li>
 		<li><a href="#INIFILE">起動設定ファイルについて</a></li>
 		<li><a href="#OBAQ">物理エンジンOBAQのサポート</a></li>
-		<li><a href="#EXCHANGE">他プラットフォームへの変換</a></li>
+		<li><a href="#EXCHANGE">他プラットフォームへの変換</a><span class="new">（New!）</span></li>
 		<li><a href="#PLUGIN">拡張プラグイン・外部DLLのサポート</a></li>
 		<li><a href="#INPUT">各種入出力への対応について</a></li>
 		<li><a href="#KNOWNBUG">既知の不具合について</a></li>
@@ -61,7 +61,7 @@
 	特殊な利用を想定したHSP3DishですがWindows上で使用する上では、
 	DirectXを使用した高速描画や、アルファチャンネルやPNG形式の標準サポートなど、
 	通常のHSP3にはないメリットも持ちあわせています。<br>
-	さらに、3D機能や高度な物理演算をサポートする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4ランタイム</a>も、HSP3Dishから派生する形で提供されています。<br>
+	さらに、3D機能や高度な物理演算をサポートする<a href="hgimg4.html">HGIMG4ランタイム</a>も、HSP3Dishから派生する形で提供されています。<br>
 	</p>
 	<p>
 	Linux及び小型デバイスRaspberry Pi上で動作する、<a href="http://hsp.tv/make/hsp3linux_pi.html" target="_blank">HSP3 for Linux/Raspberry Pi</a>は、別途パッケージ版を配布しています。詳しくは、
@@ -94,8 +94,9 @@
 	</pre>
 	<p>
 	以降は、通常のHSP3スクリプトと同様にソースを記述することができます。
-	ただし、HSP3Dish環境に適用させるために、いくつかの制約があります。
-	大きな制約は以下の通りです。
+	ただし、マルチプラットフォームで動作させるためには、以下の機能は
+	利用できないという制約があります。
+	Windowsプラットフォームのみで使用する限りは、これらの制約はありません。
 	</p>
 	<ul>
 	<li>拡張プラグインの命令は未サポート</li>
@@ -104,9 +105,8 @@
 	<li>モジュール変数に関する機能は未サポート(モジュール機能そのものはサポートされます)</li>
 	</ul>
 	<p>
-	これらは、Windows以外のプラットフォーム上で再現できない機能を持っているため、
-	マルチプラットフォームを前提としたプログラムでは使用できません。
-	Windows版のHSP3Dishのみを使用する場合は、これらの機能も利用することができます。
+	これらは、Windows以外のプラットフォーム上で再現できない機能を使用しています。
+	プラットフォームの対応に応じて、機能を利用するようにしてください。
 	</p>
 	<p>
 	また、スマートフォンのメモリやセキュリティの制約を反映して
@@ -115,10 +115,9 @@
 	<ul>
 	<li>出力は単一のスクリーン(ID#0)のみに限られます
 	　(複数のウインドゥ表示はサポートされていません)</li>
-	<li>スクリーンサイズを変更できません
-	　(デバイスが定めたサイズで自動的に初期化されます)</li>
 	<li>buffer命令で作成した画像バッファに対する加工ができません
-	　(画像の割り当ては可能ですが、描画命令を使用できません)</li>
+	　(画像の割り当ては可能ですが、描画命令を使用できません。
+	ただし、HGIMG4ランタイムでは限定的にサポートしています)</li>
 	<li>デバイス間での完全なフォントの統一が取れません
 	　(日本語の文字フォントについては機種依存になります)</li>
 	<li>notesave、bsave命令などデバイスへの書き出しに制限があります</li>
@@ -139,18 +138,31 @@
 
 	<h2 id="DRAWDIFF">HSP3との差異</h2>
 	<p>
-	提供されているHSP3Dishは、OpenGLやDirectXによる高速描画を前提として
+	HSP3Dishは、高速描画とマルチプラットフォームを前提として
 	作成されています。通常のHSP3とは、以下の点で異なっています。
 	</p>
 	<ul>
-	<li>redraw 0により画面がクリアされます</li>
+	<li>redraw命令により画面の更新する必要があります</li>
 	<p>
 	画面の書き換えに関するソースは、redraw 0で描画開始を知らせて、
 	redraw 1により描画終了タイミングを知らせるようにしてください。
-	これにより、効率よく各種描画の命令が実行されます。
+	これにより、効率よく各種描画の命令が実行されます。<br>
 	通常のHSP3とは違い、「redraw 0」を指定することにより、スクリーンが
-	一旦クリアされます。
+	一旦クリアされますので、それまでに描かれていた内容は残りません。
+	表示するものを毎回描画する必要があることを意識してください。
 	</p>
+	<pre>
+	redraw 0	; 描画を始める(画面クリア)
+	～ここに描画命令を記述します～
+	redraw 1	; 描画を完了する(画面が更新されます)
+	await 1000/60	; 時間待ちを行う(1/60秒で待ちます)
+	</pre>
+	<p>
+	必ず、「redraw 0」と「redraw 1」を記述して、その間に描画命令を
+	記述する必要があります。HSP3も同様ですが、ループ内では、待ち時間を
+	入れる必要があります。awaitまたはwait命令でタイミングを調整してください。
+	</p>
+
 	<li>アルファチャンネルの扱い</li>
 	<p>
 	picload、celload命令によりアルファチャンネルを含む画像ファイルを
@@ -163,7 +175,7 @@
 	<li>描画速度の向上</li>
 	<p>
 	通常のHSP3では、描画のアクセラレーションは限定的でしたが、
-	HSP3Dish(GL版)では、グラフィックカードの機能を利用して
+	HSP3Dish及びHGIMG4では、グラフィックカードの機能を最大限に利用して
 	高速な描画、及び高品質な回転・拡大・縮小を行ないます。
 	半透明やアルファチャンネルなどの使用で、違いが顕著に現われます。
 	</p>
@@ -176,22 +188,17 @@
 
 	<li>動画再生の非サポート</li>
 	<p>
-	mmload/mmplay命令によるavi/mpg/wmv形式の再生はサポートされません。
-	Windows版では、効果音にwav、BGM(サウンド)にmidまたはmp3を使用することが可能ですが、
-	プラットフォームごとにサポートする形式が変更される可能性があります。
+	Windows版以外のプラットフォームでは、mmload/mmplay命令によるavi/mpg/wmv形式の
+	動画再生はサポートされません。
+	効果音にwav、BGM(サウンド)にmp3を使用することが可能ですが、
+	プラットフォームごとにサポートする形式が異なる可能性があります。
 	</p>
-
-	<li>実数演算の精度</li>
-	<p>
-	実数(浮動小数点演算)の精度が、HSP3Dishでは単精度(32bit)扱いとなります。
-	これは、デバイスの演算能力や実行速度などを考慮したもので、標準のHSP実数(64bit)よりも低い精度になることを考慮しておいてください。通常の使用上は特に問題のない範囲だと考えられます。
-	</p>
-
 	</ul>
 
-	<h2 id="BUTTON">button命令について</h2>
+	<h2 id="BUTTON">配置オブジェクトについて</h2>
 	<p>
-	現在サポートされている配置オブジェクトは、button命令によるボタンのみとなっています。
+	現在すべてのプラットフォームでサポートされている配置オブジェクトは、
+	button命令によるボタンのみとなっています。
 	標準のオブジェクトと以下の点が異なっているので注意してください。
 	</p>
 	<pre>
@@ -202,7 +209,14 @@
 	・ボタンの描画はredrawによる画像更新時に行なわれます
 	</pre>
 	<p>
-	これ以外のオブジェクトについては、今後順次サポートしていく予定です。
+	Windows/Linuxプラットフォームでは、以下の配置オブジェクトをサポートしています。
+	</p>
+	<pre>
+	・チェックボックス(chkbox)
+	・入力ボックス(input)
+	</pre>
+	<p>
+	今後多くのプラットフォームで、配置オブジェクトを幅広くサポートする予定です。
 	</p>
 
 	<h2 id="GMODE">gmode命令について</h2>
@@ -497,12 +511,22 @@
 	<li>別プラットフォーム向けの開発環境でCソースをコンパイル
 	   (各プラットフォーム向けライブラリが別途提供されます)</li>
 	<li>アプリケーションの変換完了
-	   (逐次実行(インタプリタ)ではなくネイティブコードとして実行します)</li>
+	   (html5版を除いて逐次実行(インタプリタ)ではなくネイティブコードとして実行します)</li>
 	</ol>
 	<p>
 	スクリプトの変換などをサポートするためのツールとして、「HSP3Dish Helper」アプリケーションが用意されています。
+	「HSP3Dish Helper」は、HSPスクリプトエディタの「ツール」→「HSP3Dish/Cソース変換」のメニューから起動することができます。
+	</p>
+		<p><img src="hsp3dish/s_js1.jpg"></p>
+	<p>
 	詳しくは、それぞれのプラットフォームごとに用意されるマニュアルを参照してください。
 	</p>
+	<ul>
+			<li><a href="hsp3dish_js.htm">WebGL/JavaScript版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
+			<li><a href="hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
+			<li><a href="hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
+			<li><a href="hsp3cnv.txt">HSP3ソースコンバーター・マニュアル（hsp3cnv.txt）</a></li>
+	</ul>
 
 
 	<h2 id="PLUGIN">拡張プラグイン・外部DLLのサポート</h2>
