--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -91,11 +91,14 @@
 				<ol>
 					<li><a href="#TASK">HSPのタスク</a></li>
 					<li><a href="#SCR_AND_WND">画面とウィンドウ</a></li>
+					<li><a href="#PRINT">フォントと文字表示<span class="new">（New!）</span></a></li>
 					<li><a href="#IMG_FILE">画像ファイルの利用</a></li>
 					<li><a href="#CUR_POSITION">カレントポジション</a></li>
 					<li><a href="#GUI_OBJECT">配置オブジェクト</a></li>
+					<li><a href="#LAYER_OBJECT">レイヤーオブジェクト<span class="new">（New!）</span></a></li>
 					<li><a href="#CUR_COLOR">カレントカラー</a></li>
 					<li><a href="#CEL_FUNCTION">CEL関連命令について</a></li>
+					<li><a href="#INPUT">入力の取得<span class="new">（New!）</span></a></li>
 					<li><a href="#MEM_BUFFER">メモリバッファの使用</a></li>
 					<li><a href="#PLAY_MULTIMEDIA">マルチメディア再生</a></li>
 					<li><a href="#VAR_INIT">未初期化の変数検出</a></li>
@@ -3857,6 +3860,78 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 			boxf命令などで画面をクリアするようにしてください。
 		</p>
 
+		<h3 id="PRINT">フォントと文字表示</h3>
+		<p>
+			最も基本的で単純な文字表示のための命令がmes(print)です。
+			mes命令とprint命令はどちらも同じ機能です。(伝統的なBASICの文法に合わせてprintというキーワードも利用可能になっていますが、HSP3ではmes命令を推奨しています。)<br>
+			mes命令に続いて、画面に表示したい文字列を「"(ダブルクォーテーション)」で囲んで指定します。
+		</p>
+		<pre>; 例
+			mes "こんにちは!"</pre>
+		<p>
+			上の例では、「こんにちは!」を表示します。表示位置は、pos命令で指定するカレントポジションが参照されます。
+			文字を表示した後は、カレントポジションは次の行に自動的に移動します。ただし、オプションの設定によって最後の文字の後ろに移動させることも可能です。<br>
+			表示される文字は、標準で設定された書体が使用されますが、font命令によって書体を切り替えることが可能です。
+		</p>
+		<pre>; 例
+			font msgothic,20,1</pre>
+		<p>
+			上の例では、MSゴシックという書体の20ポイントサイズ、太字の設定に変更しています。
+			これ以降にmes命令で文字を表示した場合は、指定した書体のものになります。<br>
+			font命令は以下のようなパラメーターを持っています。
+		</p>
+		<pre>
+			font "fontname",p1,p2,p3
+			"fontname"   : フォント名
+			p1=1～(12)   : フォントの大きさ
+			p2=0～(0)    : フォントのスタイル
+			p3=1～(1)    : フォント修飾の幅</pre>
+		<p>
+			フォント名では、インストールされているフォント名を指定することができます。
+			Windowsでは、標準的にインストールされているフォントをマクロ名で指定することが可能です。msminchoと記述した場合は"ＭＳ 明朝"、msgothicと記述した場合は"ＭＳ ゴシック"が選択されます。<br>
+			フォントの大きさはドット数に比例した論理サイズで指定します。
+			数が大きいほど、文字も大きくなります。フォントのスタイルは、
+		</p>
+		<pre>
+			  スタイル 1  : 太文字
+			  スタイル 2  : イタリック体
+			  スタイル 4  : 下線
+			  スタイル 8  : 打ち消し線
+			  スタイル16  : アンチエイリアス</pre>
+		<p>
+			の値を指定できます。数値を合計することで複数のスタイルを同時に指定することも可能です。p2パラメーターを省略すると、0(通常のスタイル)になります。<br>
+			mes命令のパラメーターは以下の通りです。
+		</p>
+		<pre>
+			mes "strings",sw
+			"strings" : 表示するメッセージまたは変数
+			sw(0)     : オプション</pre>
+		<p>
+			mes命令の最初のパラメーターは、文字列または変数名を指定することができます。変数名を指定した場合は、変数に代入されている内容を表示します。<br>
+			2番目のオプションパラメーターによって文字の修飾と動作の設定を行うことが可能です。
+		</p>
+		<pre>
+			   値  : マクロ名       : 動作
+			 -----------------------------------------------------
+			   1   : mesopt_nocr    : 最後に改行しない
+			   2   : mesopt_shadow  : 影付き文字を描画する
+			   4   : mesopt_outline : 縁取り文字を描画する
+			   16  : mesopt_gmode   : gmodeの設定を反映する(HSP3Dishのみ)</pre>
+		<p>
+			オプションに2またはmesopt_shadowを指定した場合は、影の付いた文字を描画します。
+			オプションに4またはmesopt_outlineを指定した場合は、縁取りの付いた文字を描画します。
+			影と縁取りは、objcolor命令で指定された色が使用されます。
+			また、影と縁取りの幅はfont命令の第4パラメーターで指定することができます。
+		</p>
+		<p><center><img src="img/s_mesopt.png"></center></p>
+		<p>
+			上の例では、左が影付き文字、中央が縁取り文字、右が通常の文字になります。
+			オプションに16またはmesopt_gmodeを指定した場合は、gmodeで指定した半透明、色加算などの設定を反映した描画を行います。
+			(このオプションは、HSP3Dish及びHGIMG4でのみ有効です。通常のHSP3ランタイムでは無視されます)<br>
+			オプション値は加算することで複数を同時に指定することができます。
+			「mesopt_nocr+mesopt_shadow」を指定した場合は、影付きで改行しない表示となります。
+		</p>
+
 
 		<h3 id="IMG_FILE">画像ファイルの利用</h3>
 		<p>
@@ -3911,6 +3986,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 			<tr><td>チェックボックス</td><td>chkbox</td><td>ON/OFFチェックマーク切り替え</td></tr>
 			<tr><td>コンボボックス</td><td>combox</td><td>複数要素から選択可能な枠</td></tr>
 			<tr><td>リストボックス</td><td>listbox</td><td>複数要素から選択可能な枠</td></tr>
+			<tr><td>レイヤーオブジェクト</td><td>layerobj</td><td>ユーザー定義描画オブジェクト</td></tr>
 		</table>
 		<p>		
 			それぞれのオブジェクトには、オブジェクトIDという番号が割り振られ管理されています。
@@ -3933,6 +4009,106 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 			winobj命令により追加できるほか、axobj命令によりActiveXコントロールを直接
 			追加することも可能です。
 		</p>
+
+
+		<h3 id="LAYER_OBJECT">レイヤーオブジェクト</h3>
+		<p>
+			レイヤーオブジェクトは、ユーザーによって定義される配置オブジェクトです。
+			あらかじめ画面上の描画を行うサブルーチンを登録しておくことで、指定したタイミング(レイヤー)で描画を実行させることができます。
+		</p>
+		<PRE>
+		　例 :
+				layerobj 320,240,objlayer_normal,*laysub,100
+				stop
+			*laysub
+				return
+		</PRE>
+		<p>
+			レイヤーオブジェクトはそれ自体では何の機能も持ちません。
+			画面内の特定のエリアをレイヤーオブジェクトとして管理し、描画のタイミングごとにユーザーのプログラム(コールバックルーチン)を呼び出します。
+			使い方は色々ありますが、後から追加されるモジュールなどで描画部分だけを独立して管理することができます。<br>
+			また、objprm命令でパラメーターを受け取ることができ、独自の配置オブジェクトを設置したり、作成することも可能です。<br>
+			layerobj命令は以下の書式で記述します。
+		</p>
+		<PRE>
+			layerobj p1,p2,p3,*label,p4
+			p1,p2     ; レイヤーオブジェクトのXYサイズ（ドット単位）
+			p3(0)     : レイヤーID
+			*label    : レイヤーオブジェクトの処理サブルーチン
+			p4=0～(0) : オプション値
+		</PRE>
+		<p>
+			レイヤーオブジェクトに描画領域を通知するため、p1,p2でX,Yサイズをドット単位で指定する必要があります。p1,p2の指定を省略した場合は、画面全体のサイズとなります。
+			これで、カレントポジションX,Yを左上の座標として、p1,p2で指定したサイズまでをレイヤーオブジェクトとして扱います。
+			p3パラメーターで、描画するレイヤーを指定します。
+		</p>
+		<PRE>
+			  p3 : 描画するレイヤー
+			 --------------------------------------------------------------
+			    0 : 描画を行わない(objlayer_min)
+			    1 : 背景レイヤー(objlayer_bg)
+			    2 : 通常の描画レイヤー(objlayer_normal)
+			    3 : GUIレイヤー(objlayer_posteff)
+			    4 : 最前面の描画レイヤー(objlayer_max)
+			 +256 : レイヤーオブジェクトの重複登録を許可する(objlayer_multi)
+		</PRE>
+		<p>
+			*labelパラメーターで、レイヤーオブジェクトの処理サブルーチンを指定します。
+			このサブルーチンはユーザー自身が用意する必要があります。
+			p4パラメーターで、レイヤーオブジェクトに設定する任意の整数値を設定することができます。<br>
+			*labelパラメーターで指定された、レイヤーオブジェクトの処理サブルーチンは、
+			様々なタイミングで呼び出されます。このサブルーチンは、<a href="#CALLBACK">コールバックルーチン</a>と呼ばれる仕様を守る必要があります。(wait,await,stop等の時間待ちを行う命令を記述することができません)<br>
+			処理サブルーチン呼び出し時には、システム変数iparam,wparam,lparamに必要な情報が代入されますので、この内容に従って処理を記述してください。
+		</p>
+		<PRE>
+			システム変数  : 内容
+			---------------------------------------------------------------
+			iparam        : 受け渡されるパラメーター
+			wparam        : 配置オブジェクトID
+			lparam        : 呼び出し要因
+		</PRE>
+		<p>
+			処理サブルーチンの中では、最初にlparamに代入された呼び出し要因を調べて、それに応じた処理を行ってください。
+			呼び出し要因は、以下の値のいずれかになります。
+		</p>
+		<PRE>
+			   値 : 呼び出し要因(マクロ名)
+			 --------------------------------------------------------------
+			    1 : 新しく設置された(objlayer_cmdinit)
+			    2 : オブジェクトが削除される前(objlayer_cmdterm)
+			    3 : objprm命令でint値を渡された(objlayer_cmdprmi)
+			    4 : objprm命令で文字列を渡された(objlayer_cmdprms)
+			    5 : objprm命令でdouble値を渡された(objlayer_cmdprmd)
+			    6 : 描画するタイミング(objlayer_cmddraw)
+			    7 : 一定時間が経過した(未実装)(objlayer_cmdtime)
+		</PRE>
+		<p>
+			必ずしも、すべての呼び出し要因を処理する必要はありません。
+			必要な要因だけを処理して、素早くreturn命令でシステムに処理を戻してください。<br>
+			1はlayerobj命令が実行された直後、2はclrobj命令などでオブジェクトが破棄される直前に呼び出されます。
+			3～5は、objprm命令で値が渡された際に呼び出されます。値の型によって値が変わるので、それに応じた対応を行う必要があります。
+			int値の場合は、iparam。文字列の場合は、refstr、double値の場合は、refdvalにそれぞれ渡された値が代入されます。<br>
+			6は、redraw命令が実行された適切なタイミングで呼び出されます。
+			これは、あらかじめlayerobj命令で描画するレイヤーとして指定したレイヤーを描画するタイミングになります。<br>
+			有効な描画画面に描画命令で描画を行ってください。(必ず描画を行う必要はありません)
+			描画の際にredraw命令は必要ありません。boxf命令やmes命令など任意の描画命令を使用できます。<br>
+			レイヤーオブジェクトに割り当てられた描画エリアは、オブジェクト情報からユーザーが取得して範囲を考慮する必要があります。
+			objinfo関数を使用して以下のようなスクリプトで描画範囲を取得することができます。
+		</p>
+		<PRE>
+			; 描画の左上X,Y座標(x,y)を取得する
+			i=objinfo(wparam,objlayer_info_axis):x=i&0xffff:y=i>>16
+			; 描画のX,Yサイズ(sx,sy)を取得する
+			i=objinfo(wparam,objlayer_info_size):sx=i&0xffff:sy=i>>16
+		</PRE>
+		<p>
+			上の例では、変数x,yに左上のX,Y座標、変数sx,syにX,Yサイズが代入されます。<br>
+			レイヤーオブジェクトは、HSP3標準ランタイム、HSP3Dish及びHGIMG4ランタイムで使用可能です。
+			HSP3標準ランタイムでは、他の配置オブジェクトはWindowsのシステムが描画しているためそれらに影響を与えることはできません。
+			HSP3Dish及びHGIMG4ランタイムでは、すべての配置オブジェクトをメイン画面に描画しているため、より自由に描画の優先度をコントロールできます。
+			フェードイン・アウトやポストエフェクト、描画済みの画面に対する加工処理など、様々な用途で使用することができます。
+		</p>
+
 
 		<h3 id="CUR_COLOR">カレントカラー</h3>
 		<p>
@@ -4068,6 +4244,40 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		時点では、分割なし(画面全体をサイズとして指定)の設定になっています。
 		分割の設定は、必ず指定されたウィンドウIDに画像素材が読み込まれた状態で行なってください。
 		分割の設定を行なった後に、画像素材の読み込みを行なった場合は、分割設定はリセットされます。
+		</p>
+
+
+		<h3 id="INPUT">入力の取得</h3>
+		<p>
+			HSPでは、ユーザーからの入力を受け取る様々な方法用意されています。
+			基本的なGUIパーツ(配置オブジェクト)や、マウスからの入力、さらにキーボードや接続されたデバイスの情報などを取り込むことが可能です。
+			以下は、GUIパーツ(配置オブジェクト)を使用して数値の入力を可能にして、内容を表示するスクリプトの例です。
+		</p>
+		<pre>例:
+				a=1
+				input a
+				button "OK",*ok
+				stop
+			*ok
+				mes a
+				stop</pre>
+		<p>
+			配置オブジェクトを利用することで、手軽にユーザーからの入力を得ることができます。<br>
+			さらに直接、キーボードやマウスの状態を調べる命令も用意されています。
+		</p>
+		<pre>
+			入力を得る命令  :  内容
+			-------------------------------------------------------
+			  getkey        :  キーボードの特定のキーが押された情報を得る
+			  stick         :  ゲーム等で多く使用されるキーボードの情報を得る
+			  onkey         :  キーが押されるたびに入力を受け取る
+			  onclick       :  マウスボタンが押されるたびに入力を受け取る
+			  mousex        :  マウスのX座標を得る(システム変数)
+			  mousey        :  マウスのY座標を得る(システム変数)</pre>
+		<p>
+			この他にも、接続されたデバイスや通信を行った結果を取得するなど、様々な機能が用意されています。
+			ゲーム等で利用されるゲームパッド(ジョイスティック)は、拡張モジュールの
+			mod_joystick.as、mod_joystick2.asを利用して取得できます。詳しくは、jstick命令のヘルプを参照してください。
 		</p>
 
 
