--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -52,8 +52,9 @@
 			</dt><br>
 			<dd>
 			<p>
-			配置オブジェクトの配色を指定するためのobjcolor命令、24bitカラーコードを指定するためのrgbcolor命令など
-			多くの新機能を搭載しています。<br>
+			mes,print命令で影文字、縁取りなどの修飾ができるオプションが追加されています。
+			配置オブジェクトの配色を指定するためのobjcolor命令、ユーザー定義による配置オブジェクトを定義するためのobjlayer命令が追加されています。
+			他にも<a href="hspprog.htm#CALLBACK">コールバックルーチン</a>の厳格化や、24bitカラーコードを指定するためのrgbcolor命令など多くの新機能を搭載しています。<br>
 			また、Unicode文字を標準で使用する新しいランタイム、hsp3utf、hsp3_64などもアップデートされています。
 			いままでの機能はそのままに、ゲームだけでなく、ツール製作や手軽なプロトタイピングに役立つ機能を拡充しています。
 			</p>
@@ -75,8 +76,12 @@
 			</dt><br>
 			<dd>
 			<p>
-			iOS/android/html5(WebGL)上での実行をサポートする<a href="http://hsp.tv/make/hsp3dish.html" target="_blank">HSP3Dish</a>の各種機能を拡充しています。
-			最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、スプライト描画などの機能も拡充しています。
+			iOS/android/html5(WebGL)上での実行をサポートする<a href="hsp3dish_prog.htm">HSP3Dish</a>の各種機能を拡充しています。<br>
+			文字列の描画を大きく見直し、すべてのプラットフォームで日本語を含む文字列の表示、半透明合成に対応しています。
+			また、新しい配置オブジェクトとしてチェックボックス、入力ボックスをサポートしています。
+			Windows/Linuxプラットフォームでは、screen、bgscr命令によるウインドウサイズの変更、フルスクリーン表示に対応しています。
+			他にも、最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、スプライト描画などの機能も拡充しています。
+			webブラウザで動作するhsp3jsは、新たにWebAssembly形式の出力が可能です。
 			幅広いデバイスへの変換をサポートするHSP3Dish Helperツールも、より便利で手軽に利用できようになりました。
 			</p>
 			</dd>
@@ -86,7 +91,7 @@
 			</dt><br>
 			<dd>
 			<p>
-			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を大幅に更新しています。
+			ハイレベルな3D表現を可能にする<a href="hgimg4.html">HGIMG4プラグイン</a>を大幅に更新しています。
 			システムの安定向上のほか、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。また、Unityからモデルやアニメーションをインポートする方法などもドキュメントで解説しています。<br>
 			また、新しいHGIMG4ツールにより、fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるようになりました。
 			マテリアル(.material)ファイルをGUIにより確認することが可能になっています。
@@ -102,6 +107,16 @@
 			HSP3オフィシャルキャラクター "珠音（たまね）"を始めとして、プロ生ちゃんコラボ素材など
 			ゲームを中心に幅広く活用することができます。
 			新たなサンプルスクリプトも同梱し、オリジナルの作品作りに活用頂けます。
+			</p>
+			</dd>
+
+			<dt>
+			標準スプライト命令の拡充
+			</dt><br>
+			<dd>
+			<p>
+			HSP3Dish、HGIMG4ランタイムでは、手軽に使用できる<a href="sprite.html">標準スプライト命令</a>をサポートしています。<br>
+			標準スプライト命令は、hspdxプラグインとして追加されていた命令と互換があり、基本的な2D描画を手軽に扱うことが可能で
 			</p>
 			</dd>
 
