ドキュメントの更新
Former-commit-id: ead178f356703ef7100f73583f855dd0558777d9

--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -21,6 +21,11 @@
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#HSP3UPDATE">HSP3.6アップデート概要</a></li>
+			<li><a href="#MES">mes(print)命令の機能拡張について</a></li>
+			<li><a href="#DISHOBJ">HSP3Dishの配置オブジェクトについて</a></li>
+			<li><a href="#LAYEROBJ">レイヤーオブジェクトについて</a></li>
+			<li><a href="#SPRITE">標準スプライトについて</a></li>
+			<li><a href="#CALLBACK">コールバックルーチンについて</a></li>
 			<li><a href="#OBJCOLOR">objcolor命令について</a></li>
 			<li><a href="#RGBCOLOR">rgbcolor命令について</a></li>
 			<li><a href="#STICK">stick命令で取得されるキーの追加</a></li>
@@ -94,7 +99,7 @@
 			ハイレベルな3D表現を可能にする<a href="hgimg4.html">HGIMG4プラグイン</a>を大幅に更新しています。
 			システムの安定向上のほか、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。また、Unityからモデルやアニメーションをインポートする方法などもドキュメントで解説しています。<br>
 			また、新しいHGIMG4ツールにより、fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるようになりました。
-			マテリアル(.material)ファイルをGUIにより確認することが可能になっています。
+			マテリアル(.material)ファイルをGUIにより詳細に確認することが可能になっています。
 			</p>
 			</dd>
 
@@ -110,21 +115,140 @@
 			</p>
 			</dd>
 
-			<dt>
-			標準スプライト命令の拡充
-			</dt><br>
-			<dd>
-			<p>
-			HSP3Dish、HGIMG4ランタイムでは、手軽に使用できる<a href="sprite.html">標準スプライト命令</a>をサポートしています。<br>
-			標準スプライト命令は、hspdxプラグインとして追加されていた命令と互換があり、基本的な2D描画を手軽に扱うことが可能で
-			</p>
-			</dd>
-
 		</dl>
 
 		<p>
 		HSP3.6で追加された新機能を手軽に試すことができるサンプルスクリプトが、「sample/new36」フォルダに含まれています。
 		ぜひ新しいサンプルでの動作を、実際に実行してお試しください。
+		</p>
+
+
+	<h2 id="MES">mes(print)命令の機能拡張について</h2>
+		<p>
+		mes(print)命令が機能拡張され、文字の修飾などができるようになっています。<br>
+		mes命令のパラメーターは以下の通りです。
+		</p>
+		<pre>
+		mes "strings",sw
+		"strings" : 表示するメッセージまたは変数
+		sw(0)     : オプション</pre>
+		<p>
+		mes命令の最初のパラメーターは、文字列または変数名を指定することができます。変数名を指定した場合は、変数に代入されている内容を表示します。<br>
+		2番目のオプションパラメーターによって文字の修飾と動作の設定を行うことが可能です。
+		</p>
+		<pre>
+			   値  : マクロ名       : 動作
+			 -----------------------------------------------------
+			   1   : mesopt_nocr    : 最後に改行しない
+			   2   : mesopt_shadow  : 影付き文字を描画する
+			   4   : mesopt_outline : 縁取り文字を描画する
+			   16  : mesopt_gmode   : gmodeの設定を反映する(HSP3Dishのみ)</pre>
+		<p>
+			オプションに2またはmesopt_shadowを指定した場合は、影の付いた文字を描画します。
+			オプションに4またはmesopt_outlineを指定した場合は、縁取りの付いた文字を描画します。
+			影と縁取りは、objcolor命令で指定された色が使用されます。
+			また、影と縁取りの幅はfont命令の第4パラメーターで指定することができます。
+		</p>
+		<p><center><img src="img/s_mesopt.png"></center></p>
+		<p>
+		上の例では、左が影付き文字、中央が縁取り文字、右が通常の文字になります。
+		オプションに16またはmesopt_gmodeを指定した場合は、gmodeで指定した半透明、色加算などの設定を反映した描画を行います。
+		(このオプションは、HSP3Dish及びHGIMG4でのみ有効です。通常のHSP3ランタイムでは無視されます)<br>
+		オプション値は加算することで複数を同時に指定することができます。
+		「mesopt_nocr+mesopt_shadow」を指定した場合は、影付きで改行しない表示となります。
+		</p>
+
+
+	<h2 id="DISHOBJ">HSP3Dishの配置オブジェクトについて</h2>
+		<p>
+		HSP3Dish及びHGIMG4ランタイムにおいて、チェックボックス、入力ボックスの
+		サポートが追加されました。(入力ボックスはWindows/Linuxのみ)<br>
+		chkbox、input命令をHSP3と同様に使用できます。また、objcolor、objmode命令などで設定される背景色、フォントの変更にも対応しています。<br>
+		これらのGUIパーツはOSが提供する部品ではなく、HSP3Dishが独自に実装を行ったものです。
+		OSが提供する外観と異なる場合がありますが、異なるプラットフォーム間で統一された外観を提供することができます。
+		HSP3Dishの配置オブジェクトは、今後もHSP3と同様のパーツを拡充していく予定です。
+		</p>
+
+	<h2 id="LAYEROBJ">レイヤーオブジェクトについて</h2>
+		<p>
+		レイヤーオブジェクトは、新しく提供されたユーザーによって定義される配置オブジェクトです。
+		あらかじめ画面上の描画を行うサブルーチンを登録しておくことで、指定したタイミング(レイヤー)で描画を実行させることができます。
+		</p>
+		<PRE>
+			layerobj p1,p2,p3,*label,p4
+			p1,p2     ; レイヤーオブジェクトのXYサイズ（ドット単位）
+			p3(0)     : レイヤーID
+			*label    : レイヤーオブジェクトの処理サブルーチン
+			p4=0～(0) : オプション値
+
+		　例 :
+				layerobj 320,240,objlayer_normal,*laysub,100
+				stop
+			*laysub
+				return
+		</PRE>
+		<p>
+		レイヤーオブジェクトはそれ自体では何の機能も持ちません。
+		画面内の特定のエリアをレイヤーオブジェクトとして管理し、描画のタイミングごとにユーザーのプログラム(コールバックルーチン)を呼び出します。
+		使い方は色々ありますが、後から追加されるモジュールなどで描画部分だけを独立して管理することができます。<br>
+		また、objprm命令でパラメーターを受け取ることができ、独自の配置オブジェクトを設置したり、作成することも可能です。<br>
+		レイヤーオブジェクトの詳細は、プログラミング・マニュアルの<a href="hspprog.htm#LAYER_OBJECT">「レイヤーオブジェクト」</a>の項目を参照してください。
+		</p>
+
+
+	<h2 id="SPRITE">標準スプライトについて</h2>
+		<p>
+		HSP3Dish、HGIMG4ランタイムでは、手軽に使用できる<a href="sprite.html">標準スプライト</a>をサポートしました。<br>
+		標準スプライトの命令は、hspdxプラグインとして追加されていた命令と互換があり、2D描画を手軽に扱うことが可能です。
+		<p>
+		<p><img src="hsp3dish/es_test5.jpg"></p>
+		<p>
+		HSP3で2D描画を行う際に、スプライト(矩形の画像)を利用するための手段はいくつか用意されていました。
+		</p>
+		<pre class="quote">
+		・HSPDXプラグイン
+		・HGIMG/HGIMGXプラグイン
+		・HGIMG3プラグイン
+		・HGIMG4プラグイン
+		・mod_spriteモジュール</pre>
+		<p>
+		この中で、HSPDX、HGIMG、HGIMGXまでのプラグインはHSP2時代のもので、すでに開発が終了しており、
+		現在のOSや環境で動作させることが困難になっています。<br>
+		HGIMG3/HGIMG4プラグインには、3D機能とともに高機能な2Dスプライトとしての
+		機能も持っていますが、座標をすべて実数で管理し、機能が多い代わりに
+		習得する内容も増えて手軽には扱いずらい所がありました。<br>
+		今回、最も長い歴史があり、多くのユーザーが使用してきたHSPDXプラグインの
+		命令をもとに、手軽で扱いやすい2D専用のスプライト命令を拡充しました。<br>
+		シンプルな命令でスプライトを表示でき、スプライトの画像を自由に登録できる
+		柔軟なシステムを搭載しています。また、スプライトコールバックやマップ描画など
+		ユニークな仕組みも導入され、元のHSPDXプラグインよりも利便性向上しています。<br>
+		座標も整数で管理されており、2DゲームやUI表示などで扱いやすいものになっています。
+		もちろんイベントリストによる自律移動や3Dとの連携については、従来のプラグインを利用することもできます。<br>
+		標準スプライトは、HSP3Dish、HGIMG4がサポートする全プラットフォームで動作するほか、
+		HSP3標準ランタイムでもサポートすることを予定しています。<br>
+		標準スプライトの詳細は、<a href="sprite.htm">「標準スプライトプログラミングガイド」</a>を参照してください。
+		</p>
+
+
+	<h2 id="CALLBACK">コールバックルーチンについて</h2>
+		<p>
+		いままで、HSP3の中で発生していた割り込み、モジュール型変数のコンストラクタ、デストラクタなどを総称して
+		「コールバックルーチン」と定義し、従来よりも厳格に管理されます。<br>
+		コールバックルーチン呼び出し時は限定された状況で、すぐにreturn命令により処理を終了させる必要があります。<br>
+		以下の状況で呼び出されるラベル、またはユーザー定義命令はコールバックルーチンとして扱われます。
+		</p>
+		<pre class="quote">
+	・onkey,onexit,onerror,oncmd,onclick割り込み (gosubのみ)
+	・#deffunc命令で定義されるクリーンアップ命令の実行時
+	・モジュール型変数のコンストラクタ、デストラクタ実行時
+	・配置オブジェクト(objlayer)によるユーザー割り込み
+	・es_setgosub命令によるスプライト表示割り込み(HSP3Dish)</pre>
+		<p>
+		コールバックルーチンは、通常のサブルーチンと同様に命令を記述することができますが、
+		wait,await,stop命令など時間待ちや停止をさせることができません。<br>
+		もし、コールバックルーチンの実行中に使用できない命令があった場合は、
+		エラー42(コールバック内で使用できない命令です)というエラーが発生します。<br>
+		コールバックルーチンの詳細は、プログラミング・マニュアルの<a href="hspprog.htm#CALLBACK">「コールバックルーチン」</a>の項目を参照してください。
 		</p>
 
 
@@ -348,7 +472,7 @@
 
 	<h2 id="HSP3DISH">HSP3Dishのスクリーンサイズ変更について</h2>
 		<p>
-		HSP3Dish、HGIMG4のWindows版において、スクリーン(ウインドウ)サイズの動的な変更に対応しました。<br>
+		HSP3Dish、HGIMG4のWindows/Linux版において、スクリーン(ウインドウ)サイズの動的な変更に対応しました。<br>
 		いままでは、hsp3dish.iniファイルに記録されたサイズに従って起動時にサイズが固定されていましたが、
 		多くの方からサイズの変更とフルスクリーン対応の要望を頂き、修正致しました。
 		HSP3.6より、screen命令,bgscr命令によりスクリーン(ウインドウ)サイズを変更できます。
